--- a/TPMovies/app/src/main/AndroidManifest.xml
+++ b/TPMovies/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.tp_android">
+    package="com.example.tpmovies">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -14,6 +14,10 @@
         android:theme="@style/Theme.TP_Android">
         <activity
             android:name=".MovieDetailsActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".UpcomingMovies"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
