--- a/TPMovies/settings.gradle
+++ b/TPMovies/settings.gradle
@@ -6,5 +6,5 @@ dependencyResolutionManagement {
         jcenter() // Warning: this repository is going to shut down soon
     }
 }
-rootProject.name = "TP_Android"
+rootProject.name = "TPMovies"
 include ':app'
